Fixed center align navbar

--- a/components/SearchBar/SearchBar.module.css
+++ b/components/SearchBar/SearchBar.module.css
@@ -1,9 +1,9 @@
 .topContainer {
     display: flex;
-    justify-content: center;
+    width: 50%;
+    margin: 0 auto;
     width: 700px;
     background: #e9e9e9;
-    display: flex;
     align-items: center;
     border: none;
     border-radius: 60px;
@@ -13,10 +13,10 @@
 
 .topContainerOpen {
     display: flex;
-    justify-content: center;
+    width: 50%;
+    margin: 0 auto;
     width: 700px;
     background: #e9e9e9;
-    display: flex;
     align-items: center;
     border: none;
     padding-left: 20px;
@@ -26,6 +26,8 @@
 
 .bottomContainer {
     display: flex;
+    width: 50%;
+    margin: 0 auto;
     gap: 10px;
     width: 698px;
     padding-left: 42px;
@@ -33,12 +35,6 @@
     border-radius: 0px 0px 20px 20px;
     background-color: #e9e9e9;
     border: 'none';
-}
-
-.container {
-    display: flex;
-    width: 100%;
-    justify-content: center;
 }
 
 .searchBar {
